# monocular-mocap

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  config.json  imgui.ini  vcpkg.json
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
src/: main.cpp
src/capture/: CMakeLists.txt  camera.cpp  camera.hpp  camera_source.cpp  camera_source.hpp  capture_source.hpp  capture_thread.cpp  capture_thread.hpp  device_enumerator.cpp  device_enumerator.hpp  file_source.cpp  file_source.hpp  frame_pool.hpp
src/core/: CMakeLists.txt  concurrent_queue.hpp  config.cpp  config.hpp  json_glm.hpp  logger.cpp  logger.hpp  msgpack_glm.hpp  result.hpp  types.hpp
src/detection/: CMakeLists.txt  detection_thread.cpp  detection_thread.hpp  i_detector.hpp  onnx_detector.cpp  onnx_detector.hpp  yolov8_joint_map.hpp
src/flow/: CMakeLists.txt  optical_flow_processor.cpp  optical_flow_processor.hpp
src/render/: CMakeLists.txt  texture.cpp  texture.hpp
src/ui/: CMakeLists.txt  application_state.hpp  console_panel.cpp  console_panel.hpp  controls_panel.cpp  controls_panel.hpp  main_ui.cpp  main_ui.hpp  status_panel.cpp  status_panel.hpp  texture.cpp  texture.hpp  ui_types.hpp  viewport_panel.cpp  viewport_panel.hpp  window_manager.cpp  window_manager.hpp
tests/: CMakeLists.txt  main_test.cpp  test_concurrent_queue.cpp  test_detection.cpp  test_flow.cpp  test_result.cpp
